Исправлены методы для парсинга