@@ -9,14 +9,12 @@ import java.util.List;
 public class App
 {
     public static void main( String[] args ) {
-//        String input1 = "data/1.xlsx";
+        String input1 = "data/1.xlsx";
         String input2 = "data/2.xlsx";
-        List<StringTable> stringTables = new ArrayList<>();
-//        ParseExcellTable parseExcellTable1 = new ParseExcellTable();
-//        stringTables.addAll(parseExcellTable1.parseExcell(input1,false));
-//        int id = stringTables.get(stringTables.size()-1).getId();
-//        parseExcellTable1 = new ParseExcellTable(id);
-        ParseExcellTable parseExcellTable1 = new ParseExcellTable(13359);
+        ParseExcellTable parseExcellTable1 = new ParseExcellTable();
+        List<StringTable> stringTables = new ArrayList<>(parseExcellTable1.parseExcell(input1, false));
+        int id = stringTables.getLast().getId();
+        parseExcellTable1 = new ParseExcellTable(id);
         stringTables.addAll(parseExcellTable1.parseExcell(input2,true));
 
     }
